warning on shadow, button alignment fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -109,18 +109,5 @@ background-image: linear-gradient(
   background: black;
   border-radius: 5px;
   padding: 20px;
-
 }
 
-button {
-    padding: 8px 15px;
-    width: 5rem;
-    background-color: rgb(62, 62, 62);
-    border-radius: 1rem;
-    color: #fff;
-    font-weight: 700;
-    letter-spacing: 0.15rem;
-    text-transform: uppercase;
-    cursor: pointer;
-    border: none;
-  }
